--- a/assets/style/layout/_footer.scss
+++ b/assets/style/layout/_footer.scss
@@ -1,15 +1,20 @@
 .footer-top {
     background: $black4;
+    min-width: 100vw;
 
     &__container {
-        max-width: 1100px;
-        margin: 0 auto;
         padding: 60px 0 40px;
 
         &-mail {
             @include childCenter(space-between);
             padding-bottom: 50px;
             border-bottom: 1px solid rgba(133, 133, 133, 0.5);
+            max-width: 1100px;
+            margin: 0 auto;
+
+            @media screen and (max-width: 768px) {
+                flex-direction: column;
+            }
 
             h3 {
                 font-size: 1.7rem;
@@ -50,6 +55,7 @@
             @include childCenter(space-between);
             padding: 40px 0;
             max-width: 1000px;
+            margin: 0 auto;
 
             &-categorie {
                 h5 {
@@ -76,6 +82,8 @@
         &-logo {
             border-top: 1px solid rgba(133, 133, 133, 0.5);
             padding-top: 50px;
+            max-width: 1100px;
+            margin: 0 auto;
 
             img {
                 height: 60px;
